tests/fixtures/valid/semantic_ok/bool_condition.pine
//@version=6
indicator("Bool")
flag = close > open
x = 0
if flag
    x := 1
else
    x := 0
plot(x)
