tests/fixtures/invalid/semantic/na_bool_context.pine
//@version=6
indicator("Bad")
if na
    x = 1
